<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">smartcard reader</string>
    <string name="save">Log to file</string>
    <string name="intro_aid_route">Tap smartcard to select app&#8230;</string>
    <string name="intro_aid_route_manual">Hold against smartcard for manual select mode&#8230;</string>
    <string name="intro_emv_read">Tap smartcard to read payment data&#8230;\n</string>
    <string name="wrong_tag_err">Not ISO-DEP, emulate card with AID above!</string>
    <string name="wrong_resp_err">Select fail, emulate card with AID above!</string>
    <string name="tag_lost_err">Smartcard was removed</string>
    <string name="select_success">app selected!</string>
    <string name="select_success_prefix">app</string>
    <string name="hce_msg_prefix">smartcard demo msg</string>
    <string name="reader_msg_prefix">smartcard reader msg</string>
    <string name="in_msg_prefix">&lt;&#45;&#45;&#160;</string>
    <string name="out_msg_prefix">&#45;&#45;&gt;&#160;</string>
    <string name="okay_msg_prefix">**&#160;</string>
    <string name="err_msg_prefix">!!&#160;</string>
    <string name="select_ppse_err" formatted="false">Select ppse fail, status: 0x%X (%s)</string>
    <string name="select_app_err" formatted="false">Select app fail, status: 0x%X (%s)</string>
    <string name="select_ppse_ok">Select ppse okay, status: 0x%X</string>
    <string name="select_app_ok">Select app okay, status: 0x%X</string>
    <string name="select_app">select app</string>
    <string name="get_data_ok">Get data okay, status: 0x%X</string>
    <string name="get_data_err">Get data fail, status: 0x%X</string>
    <string name="gpo_ok">Get processing options okay, status: 0x%X</string>
    <string name="gpo_err">Get processing options fail, status: 0x%X</string>
    <string name="gpo_aip_afl_err">GPO response did not contain AIP and AFL</string>
    <string name="read_rec_ok" formatted="false">Read record okay, sfi: %d, rec: %d, status: 0x%X</string>
    <string name="read_rec_err" formatted="false">Read record fail, sfi: %d, rec: %d, status: 0x%X</string>
    <string name="aid_route">aid route mode</string>
    <string name="emv_read">emv read mode</string> 
    <string name="new_app">new smartcard app</string>
    <string name="copy_app">copy smartcard app</string>
    <string name="edit_apps">edit smartcard app</string>
    <string name="share_msgs">share messages</string>
    <string name="share_msgs_via">share messages via&#8230;</string>
    <string name="clear_msgs">clear messages</string>
    <string name="about">about</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_dismiss">Dismiss</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_done">Done</string>
    <string name="dialog_quit">Quit</string>
    <string name="smartcard_app">smartcard app</string>
    <string name="new_app_name">App:</string>
    <string name="new_app_name_hint">&lt;&#160;app name here!&#160;&gt;</string>
    <string name="new_app_aid">AID:</string>
    <string name="new_app_aid_hint">&lt;&#160;5&#8211;16 hex bytes&#160;&gt;</string>
    <string name="new_app_type">Type:</string>    
    <string name="radio_payment">payment</string>
    <string name="radio_other">other</string>
    <string name="make_current">Set as current app to select?</string>
    <string name="empty_name">App name required!</string>
    <string name="invalid_aid">5&#8211;16 hex byte AID required!</string>
    <string name="name_exists">App name %s exists!</string>
    <string name="aid_exists">AID %s exists!</string>
    <string name="app_icon_alt">P</string>
    <string name="tap_to_copy">Select app to copy&#8230;</string>
    <string name="tap_to_edit">Select app to edit, or long press to discard&#8230;</string>
    <string name="nfc_disabled">Enable NFC?</string>
    <string name="enable_nfc">This app is useless when NFC is disabled. Reader mode depends on it. Hit OK to go to Settings, where you can enable NFC.</string>
    <string name="cmd_suffix">command</string>
    <string name="rsp_suffix">response</string>
    <string name="parsed_msg">parsed message</string>
    <string name="search">search</string>
    <string name="saved_to">saved to: %s</string>
    <string name="save_exception">could not save: IOException!</string>
    <string name="save_not_mounted">could not save: storage not mounted!</string>
    <string name="about_title">about %s</string>
    <string name="about_version">version %s</string>
    <string name="about_source">source &amp; licensing?</string>
    <string name="about_log_header">log files:</string>
    <string name="about_log_path">log path?</string>
    <string name="manual_select">M</string>
    <string name="auto_select">A</string>
    <string name="select">select</string>
    <string name="manual_connected">Smartcard connected in manual select mode</string>
    <string name="manual_disconnected">Smartcard not connected, tap and hold to connect&#8230;</string>
</resources>
