<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp" >
 
    <LinearLayout
        android:id="@+id/app_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="15dp" >

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/new_app_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:paddingLeft="7dp"
        android:paddingRight="7dp" />

    <EditText
        android:id="@+id/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:hint="@string/new_app_name_hint"
        android:inputType="text|textNoSuggestions"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890 "
        android:longClickable="false" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/aid_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="15dp" >
    
    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/new_app_aid"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:paddingLeft="7dp"
        android:paddingRight="7dp" />
 
    <EditText
        android:id="@+id/app_aid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:hint="@string/new_app_aid_hint"
        android:digits="0123456789ABCDEF"
        android:inputType="textCapCharacters|textNoSuggestions"
        android:longClickable="false" />
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/type_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="15dp" >
    
    <TextView
        android:id="@+id/text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/new_app_type"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:paddingLeft="7dp"
        android:paddingRight="3dp" />

    <RadioGroup
        android:id="@+id/radio_grp_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radio_payment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/radio_payment"
            android:checked="true" />
        
        <RadioButton
            android:id="@+id/radio_other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/radio_other" />
    </RadioGroup>
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/current_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
    
        <CheckBox
            android:id="@+id/make_current"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/make_current"
            android:checked="false" />
    </LinearLayout>

</LinearLayout>
